{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 52,
  "lineage": "20417c58-a2ae-8e9e-7df6-5f2ecdea02e5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:050752626387:security-group/sg-074d6f55f242fbff1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-074d6f55f242fbff1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-sg-primary",
            "name_prefix": "",
            "owner_id": "050752626387",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-050c9ff542538d1da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050752626387:security-group/sg-06adead5c625f3ded",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06adead5c625f3ded",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-sg-secondary",
            "name_prefix": "",
            "owner_id": "050752626387",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02a2e0c82038aa267"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_secondary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.primary_web",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06ee49c1e6fa8b111",
            "arn": "arn:aws:ec2:ca-central-1:050752626387:elastic-ip/eipalloc-06ee49c1e6fa8b111",
            "association_id": "eipassoc-0c7b7b98cb761063f",
            "domain": "vpc",
            "id": "eipalloc-06ee49c1e6fa8b111",
            "instance": "i-01c6f048d9027e956",
            "network_border_group": "ca-central-1",
            "network_interface": "eni-017cd039a04d6e32c",
            "private_dns": "ip-10-0-1-164.ca-central-1.compute.internal",
            "private_ip": "10.0.1.164",
            "public_dns": "ec2-3-96-81-4.ca-central-1.compute.amazonaws.com",
            "public_ip": "3.96.81.4",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_security_group.web_primary",
            "module.primary_web.aws_instance.web",
            "module.vpc_primary.aws_subnet.public",
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.primary_web",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02cd5b9bfb2512340",
            "arn": "arn:aws:ec2:ca-central-1:050752626387:instance/i-01c6f048d9027e956",
            "associate_public_ip_address": true,
            "availability_zone": "ca-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01c6f048d9027e956",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "disaster_recovery",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-017cd039a04d6e32c",
            "private_dns": "ip-10-0-1-164.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.164",
            "public_dns": "ec2-3-96-81-4.ca-central-1.compute.amazonaws.com",
            "public_ip": "3.96.81.4",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-043532a37f309f0df",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fd4345be508ff612",
            "tags": {
              "Name": "primary-web"
            },
            "tags_all": {
              "Name": "primary-web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-074d6f55f242fbff1"
            ]
          },
          "dependencies": [
            "aws_security_group.web_primary",
            "module.vpc_primary.aws_subnet.public",
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.secondary_web",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09aeeda167fd1b077",
            "arn": "arn:aws:ec2:us-east-1:050752626387:elastic-ip/eipalloc-09aeeda167fd1b077",
            "association_id": "eipassoc-04dbd406493d350a8",
            "domain": "vpc",
            "id": "eipalloc-09aeeda167fd1b077",
            "instance": "i-09d7ecec681581bb4",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f3f1c35670d1bc15",
            "private_dns": "ip-10-1-1-215.ec2.internal",
            "private_ip": "10.1.1.215",
            "public_dns": "ec2-54-243-76-30.compute-1.amazonaws.com",
            "public_ip": "54.243.76.30",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_security_group.web_secondary",
            "module.secondary_web.aws_instance.web",
            "module.vpc_secondary.aws_subnet.public",
            "module.vpc_secondary.aws_vpc.this",
            "module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.secondary_web",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00a929b66ed6e0de6",
            "arn": "arn:aws:ec2:us-east-1:050752626387:instance/i-09d7ecec681581bb4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09d7ecec681581bb4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Disaster_Recovery_2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f3f1c35670d1bc15",
            "private_dns": "ip-10-1-1-215.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.215",
            "public_dns": "ec2-54-243-76-30.compute-1.amazonaws.com",
            "public_ip": "54.243.76.30",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a303b0e196dfbb05",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-049c0676e815a3bbc",
            "tags": {
              "Name": "secondary-web"
            },
            "tags_all": {
              "Name": "secondary-web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06adead5c625f3ded"
            ]
          },
          "dependencies": [
            "aws_security_group.web_secondary",
            "module.vpc_secondary.aws_subnet.public",
            "module.vpc_secondary.aws_vpc.this",
            "module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:050752626387:network-acl/acl-04aa23ddb988d2560",
            "default_network_acl_id": "acl-04aa23ddb988d2560",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-04aa23ddb988d2560",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "050752626387",
            "subnet_ids": [
              "subnet-0c9fe5fc829090ea4",
              "subnet-0fd4345be508ff612"
            ],
            "tags": {
              "Name": "primary-vpc-default"
            },
            "tags_all": {
              "Name": "primary-vpc-default"
            },
            "vpc_id": "vpc-050c9ff542538d1da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:050752626387:route-table/rtb-05bb5d9036bf918b8",
            "default_route_table_id": "rtb-05bb5d9036bf918b8",
            "id": "rtb-05bb5d9036bf918b8",
            "owner_id": "050752626387",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "primary-vpc-default"
            },
            "tags_all": {
              "Name": "primary-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-050c9ff542538d1da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:050752626387:security-group/sg-0694e2c66bc308446",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0694e2c66bc308446",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "050752626387",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "primary-vpc-default"
            },
            "tags_all": {
              "Name": "primary-vpc-default"
            },
            "vpc_id": "vpc-050c9ff542538d1da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:050752626387:internet-gateway/igw-032bc09f25e1e9449",
            "id": "igw-032bc09f25e1e9449",
            "owner_id": "050752626387",
            "tags": {
              "Name": "primary-vpc"
            },
            "tags_all": {
              "Name": "primary-vpc"
            },
            "vpc_id": "vpc-050c9ff542538d1da"
          },
          "dependencies": [
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-032bc09f25e1e9449",
            "id": "r-rtb-070e0aac61b89fb2b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-070e0aac61b89fb2b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_primary.aws_internet_gateway.this",
            "module.vpc_primary.aws_route_table.public",
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:050752626387:route-table/rtb-070e0aac61b89fb2b",
            "id": "rtb-070e0aac61b89fb2b",
            "owner_id": "050752626387",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-032bc09f25e1e9449",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "primary-vpc-public"
            },
            "tags_all": {
              "Name": "primary-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-050c9ff542538d1da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a7365ec5e01649b1",
            "route_table_id": "rtb-070e0aac61b89fb2b",
            "subnet_id": "subnet-0fd4345be508ff612"
          },
          "dependencies": [
            "module.vpc_primary.aws_route_table.public",
            "module.vpc_primary.aws_subnet.public",
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f331843e97d72417",
            "route_table_id": "rtb-070e0aac61b89fb2b",
            "subnet_id": "subnet-0c9fe5fc829090ea4"
          },
          "dependencies": [
            "module.vpc_primary.aws_route_table.public",
            "module.vpc_primary.aws_subnet.public",
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:050752626387:subnet/subnet-0fd4345be508ff612",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd4345be508ff612",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "050752626387",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "primary-vpc-public-ca-central-1a"
            },
            "tags_all": {
              "Name": "primary-vpc-public-ca-central-1a"
            },
            "vpc_id": "vpc-050c9ff542538d1da"
          },
          "dependencies": [
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:050752626387:subnet/subnet-0c9fe5fc829090ea4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c9fe5fc829090ea4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "050752626387",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "primary-vpc-public-ca-central-1b"
            },
            "tags_all": {
              "Name": "primary-vpc-public-ca-central-1b"
            },
            "vpc_id": "vpc-050c9ff542538d1da"
          },
          "dependencies": [
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:050752626387:vpc/vpc-050c9ff542538d1da",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04aa23ddb988d2560",
            "default_route_table_id": "rtb-05bb5d9036bf918b8",
            "default_security_group_id": "sg-0694e2c66bc308446",
            "dhcp_options_id": "dopt-042b2c00c07db400a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-050c9ff542538d1da",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05bb5d9036bf918b8",
            "owner_id": "050752626387",
            "tags": {
              "Name": "primary-vpc"
            },
            "tags_all": {
              "Name": "primary-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050752626387:network-acl/acl-079cff0373867a444",
            "default_network_acl_id": "acl-079cff0373867a444",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-079cff0373867a444",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "050752626387",
            "subnet_ids": [
              "subnet-049c0676e815a3bbc",
              "subnet-0f31e6ea1fb2b7ff6"
            ],
            "tags": {
              "Name": "secondary-vpc-default"
            },
            "tags_all": {
              "Name": "secondary-vpc-default"
            },
            "vpc_id": "vpc-02a2e0c82038aa267"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_secondary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050752626387:route-table/rtb-0ce4d930fb124b372",
            "default_route_table_id": "rtb-0ce4d930fb124b372",
            "id": "rtb-0ce4d930fb124b372",
            "owner_id": "050752626387",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "secondary-vpc-default"
            },
            "tags_all": {
              "Name": "secondary-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-02a2e0c82038aa267"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_secondary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050752626387:security-group/sg-0a06ae0c49f36634c",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0a06ae0c49f36634c",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "050752626387",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "secondary-vpc-default"
            },
            "tags_all": {
              "Name": "secondary-vpc-default"
            },
            "vpc_id": "vpc-02a2e0c82038aa267"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_secondary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050752626387:internet-gateway/igw-03f9dbe6eb983bd61",
            "id": "igw-03f9dbe6eb983bd61",
            "owner_id": "050752626387",
            "tags": {
              "Name": "secondary-vpc"
            },
            "tags_all": {
              "Name": "secondary-vpc"
            },
            "vpc_id": "vpc-02a2e0c82038aa267"
          },
          "dependencies": [
            "module.vpc_secondary.aws_vpc.this",
            "module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03f9dbe6eb983bd61",
            "id": "r-rtb-090a4ea49f7cf8f891080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-090a4ea49f7cf8f89",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_secondary.aws_internet_gateway.this",
            "module.vpc_secondary.aws_route_table.public",
            "module.vpc_secondary.aws_vpc.this",
            "module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050752626387:route-table/rtb-090a4ea49f7cf8f89",
            "id": "rtb-090a4ea49f7cf8f89",
            "owner_id": "050752626387",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03f9dbe6eb983bd61",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "secondary-vpc-public"
            },
            "tags_all": {
              "Name": "secondary-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a2e0c82038aa267"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_secondary.aws_vpc.this",
            "module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea55ba31ef8905d5",
            "route_table_id": "rtb-090a4ea49f7cf8f89",
            "subnet_id": "subnet-049c0676e815a3bbc"
          },
          "dependencies": [
            "module.vpc_secondary.aws_route_table.public",
            "module.vpc_secondary.aws_subnet.public",
            "module.vpc_secondary.aws_vpc.this",
            "module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05eeb771aba26681a",
            "route_table_id": "rtb-090a4ea49f7cf8f89",
            "subnet_id": "subnet-0f31e6ea1fb2b7ff6"
          },
          "dependencies": [
            "module.vpc_secondary.aws_route_table.public",
            "module.vpc_secondary.aws_subnet.public",
            "module.vpc_secondary.aws_vpc.this",
            "module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050752626387:subnet/subnet-049c0676e815a3bbc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049c0676e815a3bbc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "050752626387",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "secondary-vpc-public-us-east-1a"
            },
            "tags_all": {
              "Name": "secondary-vpc-public-us-east-1a"
            },
            "vpc_id": "vpc-02a2e0c82038aa267"
          },
          "dependencies": [
            "module.vpc_secondary.aws_vpc.this",
            "module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050752626387:subnet/subnet-0f31e6ea1fb2b7ff6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f31e6ea1fb2b7ff6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "050752626387",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "secondary-vpc-public-us-east-1b"
            },
            "tags_all": {
              "Name": "secondary-vpc-public-us-east-1b"
            },
            "vpc_id": "vpc-02a2e0c82038aa267"
          },
          "dependencies": [
            "module.vpc_secondary.aws_vpc.this",
            "module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050752626387:vpc/vpc-02a2e0c82038aa267",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-079cff0373867a444",
            "default_route_table_id": "rtb-0ce4d930fb124b372",
            "default_security_group_id": "sg-0a06ae0c49f36634c",
            "dhcp_options_id": "dopt-0fadd87223dae2f5e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02a2e0c82038aa267",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ce4d930fb124b372",
            "owner_id": "050752626387",
            "tags": {
              "Name": "secondary-vpc"
            },
            "tags_all": {
              "Name": "secondary-vpc"
            }
          }
        }
      ]
    }
  ]
}